--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.27.2",
     "firebase": "^8.10.1",
+    "mdbootstrap": "^4.20.0",
     "mui-button": "^1.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
